--- a/AddSsoDotnet3/Components/Welcome.razor
+++ b/AddSsoDotnet3/Components/Welcome.razor
@@ -24,7 +24,7 @@ else
                 <FluentTabPanel>
                     <div style="display:block; width:100%;">
                         <EditCode />
-                        <AddSSO />
+                        <GetUserProfile />
                     </div>
                 </FluentTabPanel>
                 <FluentTabPanel>
